fix(nav): fix overflowing text from hover. #97

--- a/stylus/ui-app/nav.styl
+++ b/stylus/ui-app/nav.styl
@@ -11,8 +11,10 @@ $navigation
         list-style none
 
     .coz-nav-item
-        position  relative
-        z-index   $app-index
+        hoverPadding = 10%
+        padding-right   hoverPadding
+        position        relative
+        z-index         $app-index
 
         &:hover::before
             content        ''
@@ -20,7 +22,7 @@ $navigation
             z-index        $below-index
             border-radius  0 3px 3px 0
             height         3em
-            width          90%
+            width          100% - hoverPadding
             background     grey-09
 
     .coz-nav-link
@@ -29,6 +31,9 @@ $navigation
         line-height      em(48px)
         text-decoration  none
         color            grey-11
+        text-overflow   ellipsis
+        white-space     nowrap
+        overflow        hidden
 
         &:visited
             color  grey-11
